--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	  <tr>
 	
 	  	<th>The Planets</th>
-	  	<th><img src="images/mercury.gif" alt="Mercury"></th>
-	 		<th><img src="images/earth.gif" alt="Earth"></th>
-	 		<th><img src="images/saturn.gif" alt="Saturn"></th>
-  		<th><img src="images/neptune.gif" alt="Neptune"></th>
+	  	<th><img src="images/mercury.jpg" alt="Mercury"></th>
+	 		<th><img src="images/earth.jpg" alt="Earth"></th>
+	 		<th><img src="images/saturn.jpg" alt="Saturn"></th>
+  		<th><img src="images/neptune.jpg" alt="Neptune"></th>
 	  </tr>
 	
 	  <tr class="dark">
